# turing-machine

./: README.md  dune-project  turing.opam
data/: tape  test
data/busy_beaver/: table
