(lang dune 3.10)

(name turing)

(generate_opam_files true)

(source
 (github NotNotLuka/turing_machine))

(authors "Luka Papež")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name turing)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
